# Smart-PDF-Splitting

./: .gitignore  README.md  pyproject.toml
src/pdf_splitter/: agent.py  base_agent.py  config.py  main.py  ollama_agent.py  tools.py
