[tool.poetry]
name = "pdf-splitter-agent"
version = "0.1.0"
description = "An AI-powered agent to intelligently split multi-page PDF documents using LangGraph and LLMs."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pypdf2 = "^3.0.1"
python-dotenv = "^1.1.1"
pymongo = "^4.14.0"
ollama = "^0.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"